# teams_recorder_win

./: README.md  build.spec  config.py  detector.py  floating_bar.py  hotkeys.py  main.py  make_icons.py  platform_utils.py  pyproject.toml  recorder.py  requirements.txt  settings_window.py  tray_icon.py  utils.py
