[project]
name = "teams-recorder-win"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "comtypes>=1.2.0",
    "ffmpeg>=1.4",
    "numpy>=1.26.0",
    "pillow>=10.0.0",
    "plyer>=2.1.0",
    "pyaudiowpatch>=0.2.12",
    "pycaw>=20240210",
    "pydub>=0.25.1",
    "pystray>=0.19.5",
    "samplerate>=0.2.1",
    "soundfile>=0.12.1",
]
